@@ -1,10 +1,11 @@
 texlive-bin (2014.20150305.36438-1) experimental; urgency=medium
 
-  * re-include libpoppler in new sources, debian's version is too old
   * Imported Upstream version 2014.20150305.36438
+  * re-include libpoppler in new sources, debian's version is too old
   * update/remove/unfuzzify patches
+  * build libtexlua and libtexluajit libraries
 
- -- Norbert Preining <preining@debian.org>  Thu, 05 Mar 2015 23:30:03 +0900
+ -- Norbert Preining <preining@debian.org>  Fri, 06 Mar 2015 12:08:30 +0900
 
 texlive-bin (2014.20140926.35254-6) unstable; urgency=high
 
